# HH-Vacancy-Database-Manager

./: .flake8  .gitignore  README.md  main.py  pyproject.toml
src/: base_class_hh_api.py  base_dbmanager.py  base_hh_api.py  config.py  dbmanager.py  hh_api.py  interaction_function.py  utils.py
